--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-Jinja2==2.8
-MarkupSafe==0.23
-argparse==1.2.1
-bottle==0.12.9
-mongoengine==0.10.6
-pymongo==3.2.2
-six==1.10.0
-wsgiref==0.1.2
+bottle==0.12.23
+dnspython==2.2.1
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+mongoengine==0.25.0
+pymongo==4.3.3
+six==1.16.0
